contrast fix

--- a/css/style.css
+++ b/css/style.css
@@ -62,10 +62,10 @@ main {
     border-radius: 10px;
 }
 a:link {
-    color: #004050;
+    color: #082E34;
 }
 a:visited {
-    color: whitesmoke;
+    color: #352424;
 }
 footer {
     background-color: #F84AA7;
